Changelog
=========


2.0.4 (unreleased)
------------------

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]


2.0.3 (2012-03-12)
------------------

- Fixed redirect in the checkin view for documents stored in a task.
  [phgross]

- Clear any WebDAV locks left over by ExternalEditor if necessary
  [lgraf]


2.0.2 (2012-02-27)
------------------

- Fixed decoding error in the checkin_button_handler, when trying to check in a mail.
  [phgross]

- Added French translations.
  [ttschanz]

- Removed 'List folder contents' permission from anyone but Manager in
  contact and contactfolder workflows.
  [lgraf]

- Reimplement the document view template(depends on the dexterity standard template)
  Issue #1383 Dokument: Eigenschaften anzeigen View anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1383/
  [phgross]

- Set permissions for Administrator role
  [lgraf]

- Added 'Force Checkin' permission
  [lgraf]

- Temporarily hide the task-tab in the document-tabbedview.
  #1293 Aufgaben Tab eines Dokuments voruebergehend ausblenden.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1293/
  [phgross]

- #1326 Checkout_documents wirft ein Fehler beim Versuch ein Mail auszuchecken.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1326
  Improved error handling in checkout_documents: Provide the user with a status
  message if one of the selected objects is not a document
  [eschmutz]


2.0.1 (2011-11-29)
------------------

- Added testcase for checking there's an initial version after a document got copied.
  [lgraf]

- Removed `extedit` action from opengever.document.document object actions
  [lgraf]


2.0 (2011-11-17)
----------------

- Implement default value generator(actual date) for the document_date field.
  Issue #1255 Vorschlag Tagesdatum bei Dokumenten