@@ -1,12 +1,13 @@
-from opengever.ogds.base.setuphandlers import create_sql_tables
 from opengever.ogds.base.setuphandlers import _create_example_client
+from opengever.ogds.base.setuphandlers import create_sql_tables
 from opengever.ogds.base.utils import create_session
-from plone.app.testing import applyProfile
 from plone.app.testing import FunctionalTesting
-from plone.app.testing import PloneSandboxLayer
 from plone.app.testing import PLONE_FIXTURE
-from plone.testing import z2
+from plone.app.testing import PloneSandboxLayer
+from plone.app.testing import applyProfile
+from plone.dexterity.fti import DexterityFTI, register
 from plone.registry.interfaces import IRegistry
+from plone.testing import z2
 from zope.component import getUtility
 from zope.configuration import xmlconfig
 
@@ -69,6 +70,16 @@ class DocumentFunctionalLayer(PloneSandboxLayer):
         # We need savepoint support for version retrieval with CMFEditions.
         import zope.sqlalchemy.datamanager
         zope.sqlalchemy.datamanager.NO_SAVEPOINT_SUPPORT = set([])
+
+        # test basedocument behavior
+        fti = DexterityFTI('BaseDocumentFTI')
+        fti.klass = 'plone.dexterity.content.Container'
+        fti.behaviors = (
+                         'opengever.document.behaviors.IBaseDocument',
+                         )
+        fti.schema = 'opengever.document.document.IDocumentSchema'
+        portal.portal_types._setObject('BaseDocumentFTI', fti)
+        register(fti)
 
 
 OPENGEVER_DOCUMENT_FIXTURE = DocumentFunctionalLayer()
